<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="team">Команда</string>
    <string name="list_of_developers">Над приложением работали</string>
    <string name="developer_one">Шипилов Александр Сергеевич</string>
    <string name="developer_two">Петрова Ольга Алексеевна</string>
    <string name="developer_three">Лебедев Никита Максимович</string>
    <string name="developer_four">Смирнова Анна Валерьевна</string>
    <string name="developer_five">Евстигнеев Станислав Юрьевич</string>
    <string name="main_fragment">Главная</string>
    <string name="vacancies_search">Поиск вакансий</string>
    <string name="enter_search_request">Введите запрос</string>
    <string name="favorites">Избранное</string>
    <string name="text">Text</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="choosing_place_work">Выбор места работы</string>
    <string name="select_region">Выбор региона</string>
    <string name="select_country">Выбор страны</string>
    <string name="select_industry">Выбор отрасли</string>
    <string name="no_internet">Нет интернета</string>
    <string name="empty_search_results">Не удалось получить\nсписок вакансий</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="vacancy">вакансия</string>
    <string name="vacancy_genitive">вакансии</string>
    <string name="vacancies_genitive">вакансий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="select_application_email">Выберите приложение для отправки email</string>
    <string name="select_application_call">Выберите приложение для звонка</string>
    <string name="vacancy_for_screen">Вакансия</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="job_description">Описание вакансии</string>
    <string name="responsibility">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="empty_list">Список пуст</string>
    <string name="found_f">Найдена</string>
    <string name="found_f_genitive">Найдено</string>
    <string name="found_f_genitive_pl">Найдено</string>
    <string name="place_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="input_salary">Введите сумму</string>
    <string name="show_salary">Не показывать без зарплаты</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choose">Выбрать</string>
    <string name="reset">Сбросить</string>
    <string name="enter_region">Введите регион</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="not_found_region">Такого региона нет</string>
    <string name="error_region">Не удалось получить\nсписок</string>
    <string name="place_to_work_text">%1$s, %2$s</string>
    <string name="apply">Применить</string>
    <string name="tv_work_schedule_template">%1$s, %2$s</string>
    <string name="error_occured">Произошла ошибка</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="not_found_industry">Такой отрасли нет</string>

</resources>
