<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_team"
        style="@style/toolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list_of_developers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_43dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:fontFamily="@font/ys_display_bold"
        android:text="@string/list_of_developers"
        android:textColor="@color/black"
        android:textSize="@dimen/_32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_team" />

    <TextView
        android:id="@+id/tv_developer_one"
        style="@style/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:text="@string/developer_one"
        app:layout_constraintStart_toStartOf="@+id/tv_list_of_developers"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_of_developers" />

    <TextView
        android:id="@+id/tv_developer_two"
        style="@style/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/developer_two"
        app:layout_constraintStart_toStartOf="@+id/tv_developer_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer_one" />

    <TextView
        android:id="@+id/tv_developer_three"
        style="@style/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/developer_three"
        app:layout_constraintStart_toStartOf="@+id/tv_developer_two"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer_two" />

    <TextView
        android:id="@+id/tv_developer_four"
        style="@style/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/developer_four"
        app:layout_constraintStart_toStartOf="@+id/tv_developer_three"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer_three" />

    <TextView
        android:id="@+id/tv_developer_five"
        style="@style/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/developer_five"
        app:layout_constraintStart_toStartOf="@+id/tv_developer_four"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer_four" />
</androidx.constraintlayout.widget.ConstraintLayout>
