<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context="ru.practicum.android.diploma.filters.ui.PlaceToWorkFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/choosing_place_work" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_country"
        style="@style/filter_region"
        android:layout_marginTop="@dimen/_16dp"
        android:clickable="true"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingBottom="@dimen/_20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/action_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#0000"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_country"
        app:layout_constraintEnd_toEndOf="@id/input_layout_country"
        app:layout_constraintTop_toTopOf="@id/input_layout_country" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_region"
        style="@style/filter_region"
        android:hint="@string/region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/region_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/action_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#0000"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/input_layout_region"
        app:layout_constraintEnd_toEndOf="@id/input_layout_region"
        app:layout_constraintTop_toTopOf="@id/input_layout_region" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="input_layout_region" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_apply"
        style="@style/button_apply"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:background="@drawable/bg_search_status"
        android:text="@string/choose"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintVertical_bias="1"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
